load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "nvim",
    srcs = ["client.go"],
    importpath = "hbf/internal/nvim",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/errors",
        "//internal/log",
        "@com_github_neovim_go_client//nvim",
    ],
)

go_test(
    name = "nvim_test",
    srcs = ["client_test.go"],
    embed = [":nvim"],
)
