# QuickJS integration for HBF

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "engine",
    srcs = ["engine.c"],
    hdrs = ["engine.h"],
    deps = [
        "//internal/core:log",
        "@quickjs-ng//:quickjs",
    ],
)

cc_library(
    name = "bindings",
    srcs = [
        "bindings/request.c",
        "bindings/response.c",
    ],
    hdrs = [
        "bindings/request.h",
        "bindings/response.h",
    ],
    deps = [
        "//internal/core:log",
        "@civetweb//:civetweb",
        "@quickjs-ng//:quickjs",
    ],
)

cc_library(
    name = "modules",
    srcs = ["modules.c"],
    hdrs = ["modules.h"],
    deps = [
        ":engine",
        ":loader",
        "//internal/core:log",
    ],
)

cc_library(
    name = "loader",
    srcs = ["loader.c"],
    hdrs = ["loader.h"],
    deps = [
        ":engine",
        "//internal/core:log",
        "@sqlite3",
    ],
)

cc_library(
    name = "pool",
    srcs = ["pool.c"],
    hdrs = ["pool.h"],
    deps = [
        ":engine",
        ":loader",
        "//internal/core:log",
        "@sqlite3",
    ],
)

cc_test(
    name = "engine_test",
    srcs = ["engine_test.c"],
    deps = [
        ":engine",
        "//internal/core:log",
    ],
    linkstatic = 1,
)

cc_test(
    name = "loader_test",
    srcs = ["loader_test.c"],
    deps = [
        ":engine",
        ":loader",
        "//internal/core:log",
        "//internal/db:db",
        "//internal/db:schema",
        "@sqlite3",
    ],
    linkstatic = 1,
)

cc_test(
    name = "pool_test",
    srcs = ["pool_test.c"],
    deps = [
        ":pool",
        "//internal/core:log",
        "//internal/db:db",
        "//internal/db:schema",
        "@sqlite3",
    ],
    linkstatic = 1,
)
