# QuickJS integration for HBF

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "engine",
    srcs = ["engine.c"],
    hdrs = ["engine.h"],
    deps = [
        "//internal/core:log",
        "@quickjs-ng//:quickjs",
    ],
)

cc_library(
    name = "bindings",
    srcs = [
        "bindings/request.c",
        "bindings/response.c",
    ],
    hdrs = [
        "bindings/request.h",
        "bindings/response.h",
    ],
    deps = [
        "//internal/core:log",
        "@civetweb//:civetweb",
        "@quickjs-ng//:quickjs",
    ],
)

cc_library(
    name = "modules",
    srcs = ["modules.c"],
    hdrs = ["modules.h"],
    deps = [
        ":engine",
        "//internal/core:log",
        "@sqlite3",
    ],
)



cc_test(
    name = "engine_test",
    srcs = ["engine_test.c"],
    deps = [
        ":engine",
        "//internal/core:log",
    ],
    linkstatic = 1,
)



