# QuickJS integration for HBF

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "engine",
    srcs = ["engine.c", "db_module.c", "console_module.c"],
    hdrs = ["engine.h", "db_module.h", "console_module.h"],
    deps = [
        "//internal/core:log",
        "@quickjs-ng//:quickjs",
        "//internal/db:db",
        ":bindings",
    ],
)

cc_library(
    name = "bindings",
    srcs = [
        "bindings/request.c",
        "bindings/response.c",
    ],
    hdrs = [
        "bindings/request.h",
        "bindings/response.h",
    ],
    deps = [
        "//internal/core:log",
        "@civetweb//:civetweb",
        "@quickjs-ng//:quickjs",
    ],
)

cc_test(
    name = "engine_test",
    srcs = ["engine_test.c"],
    deps = [
        ":engine",
        "//internal/core:log",
    ],
    linkstatic = 1,
)

cc_test(
    name = "stack_overflow_test",
    srcs = ["stack_overflow_test.c"],
    deps = [
        "@quickjs-ng//:quickjs",
        ":engine",
        ":bindings",
        "//internal/core:log",
        "@civetweb//:civetweb",
    ],
    data = [
        "//static:server.js",
    ],
    linkstatic = 1,
)


