# SPDX-License-Identifier: MIT
# <PODNAME> pod - SQLite database with SQLAR archive

# Build SQLite database with SQLAR archive of pod content
genrule(
    name = "pod_db",
    srcs = glob(
        ["hbf/**/*", "static/**/*"],
        exclude = ["BUILD.bazel"],
        exclude_directories = 1,
    ) + [
        "//hbf/db:overlay_schema.sql",
    ],
    outs = ["<podname>.db"],
    cmd = """
        # Create staging directory structure
        mkdir -p staging/hbf staging/static

        # Copy local hbf/ files using glob patterns
        for src in $(SRCS); do
            # Match files starting with 'pods/<podname>/hbf/' (local files)
            if [[ $$src == pods/<podname>/hbf/* ]]; then
                # Extract everything after 'pods/<podname>/hbf/'
                rel_path=$${src#pods/<podname>/hbf/}
                mkdir -p staging/hbf/$$(dirname $$rel_path)
                cp $$src staging/hbf/$$rel_path
            fi
        done

        # Copy all globbed static files
        for src in $(SRCS); do
            # Match files starting with 'pods/<podname>/static/' (local files)
            if [[ $$src == pods/<podname>/static/* ]]; then
                # Extract everything after 'pods/<podname>/static/'
                rel_path=$${src#pods/<podname>/static/}
                mkdir -p staging/static/$$(dirname $$rel_path)
                cp $$src staging/static/$$rel_path
            fi
        done

        # Create SQLAR archive
        cd staging && sqlite3 -A -cf ../temp.db hbf static
        cd ..

        # Apply overlay schema at build time
        sqlite3 temp.db < $(location //hbf/db:overlay_schema.sql)

        # VACUUM to remove dead space and optimize database size
        sqlite3 temp.db "VACUUM INTO '$(location <podname>.db)'"

        # Cleanup
        rm -rf staging temp.db
    """,
    visibility = ["//visibility:public"],
)

# Test that the pod database was created correctly
sh_test(
    name = "fs_build_test",
    srcs = ["fs_build_test.sh"],
    args = ["$(location :pod_db)"],
    data = [":pod_db"],
)
